--- a/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
@@ -1,3 +1,4 @@
+  
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -52,4 +53,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <button mat-flat-button (click)="prevPage()">Pagina Anterior</button>
+  <button mat-flat-button (click)="nextPage()">Proxima Pagina</button>
+
   
