FEAT: Implemented paginator and sort in RendaFixaTable Component

--- a/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
@@ -1,7 +1,7 @@
   
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.id}}</td>
       </ng-container>
     
@@ -11,12 +11,12 @@
     </ng-container>
   
     <ng-container matColumnDef="dataValidade">
-      <th mat-header-cell *matHeaderCellDef>Data de Validade</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de Validade</th>
       <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.dataValidade | date: 'dd/MM/yyyy' }}</td>
     </ng-container>
   
     <ng-container matColumnDef="investimentoMinimo">
-      <th mat-header-cell *matHeaderCellDef>Investimento Minimo</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Investimento Minimo</th>
       <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.investimentoMinimo}}</td>
     </ng-container>
   
@@ -53,7 +53,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <button mat-flat-button (click)="prevPage()">Pagina Anterior</button>
-  <button mat-flat-button (click)="nextPage()">Proxima Pagina</button>
+
+  <mat-paginator 
+  [pageSizeOptions]="[10, 20, 50, 100]">
+  </mat-paginator>
 
   
