FEAT: Add Renda Fixa Filter, Implemented Renda Fixa Filter Service, Change Renda Fixa Get Endpoint to support filters

--- a/src/app/pages/renda-fixa/renda-fixa.component.html
+++ b/src/app/pages/renda-fixa/renda-fixa.component.html
@@ -1,3 +1,4 @@
 <div class="container-renda-fixa">
+    <app-renda-fixa-filter></app-renda-fixa-filter>
     <app-renda-fixa-table></app-renda-fixa-table>
 </div>
