FEAT: Create button to clear filters

--- a/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.html
@@ -50,7 +50,10 @@
         
         </mat-select>
         </mat-form-field>
-    
+        <button mat-fab extended class="filter-toggle" color="warn" (click)="clearFilter()">
+            <mat-icon fontIcon="backspace"></mat-icon>
+            Limpar
+        </button>
     
     </form>
     }
