--- a/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.html
@@ -25,27 +25,33 @@
         <mat-label>Descrição</mat-label>
         <input matInput type="text" formControlName="descricao" name="descricao">
         </mat-form-field>
-    
         <mat-form-field appearance="outline">
         <mat-label>Tipo Produto</mat-label>
         <mat-select  formControlName="tipoProdutoId" name="tipoProdutoId">
-            @for (tipoProduto of tiposProduto; track tipoProduto){
-            <mat-option [value]="tipoProduto.id">
-                {{ tipoProduto.nome }}
-                </mat-option>
+        
+            <mat-option [value]="">           
+            </mat-option>
+
+            @for (tipoProduto of tiposProduto$ | async; track tipoProduto){
+                <mat-option [value]="tipoProduto.id">
+                    {{ tipoProduto.nome }}
+                 </mat-option>
             }
-            
         
         </mat-select>
         </mat-form-field>
     
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" >
         <mat-label>Indexador</mat-label>
         <mat-select formControlName="indexadorId" name="indexadorId">
-            @for (indexador of indexadores; track indexador){
-                <mat-option [value]="indexador.id">
-                    {{ indexador.nome }}
-                </mat-option>
+            <mat-option [value]="">
+                
+            </mat-option>
+
+            @for (tipoProduto of indexadores$ | async; track tipoProduto){
+                <mat-option [value]="tipoProduto.id">
+                    {{ tipoProduto.nome }}
+                 </mat-option>
             }
         
         </mat-select>
