FIX: Change Date Field in "Renda Fixa Upsert Dialog" to matDatepicker

--- a/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-upsert-dialog/renda-fixa-upsert-dialog.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-upsert-dialog/renda-fixa-upsert-dialog.component.html
@@ -8,7 +8,9 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Data de Validade</mat-label>
-      <input matInput formControlName="dataValidade" type="date" />
+      <input matInput formControlName="dataValidade" readonly [matDatepicker]="picker" />
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
