--- a/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.scss
+++ b/src/app/pages/renda-fixa/components/renda-fixa-filter/renda-fixa-filter.component.scss
@@ -13,8 +13,9 @@
 }
 
 .filter-toggle{
-    width: fit-content;
     background-color: #c5c5c5;
+    width: 200px;
+    height: 40px;
 
     &-icon{
         position: relative;
