--- a/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
@@ -3,63 +3,68 @@
       <mat-icon fontIcon="add"></mat-icon>
       NOVO ITEM
   </button>
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.id}}</td>
-      </ng-container>
-    
-    <ng-container matColumnDef="descricao">
-      <th mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.descricao}}</td>
-    </ng-container>
-  
-    <ng-container matColumnDef="dataValidade">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de Validade</th>
-      <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.dataValidade | date: 'dd/MM/yyyy' }}</td>
-    </ng-container>
-  
-    <ng-container matColumnDef="investimentoMinimo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Investimento Minimo</th>
-      <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.investimentoMinimo}}</td>
-    </ng-container>
-  
-    <ng-container matColumnDef="tipoProduto">
-      <th mat-header-cell *matHeaderCellDef>Tipo Produto</th>
-      <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.tipoProduto.nome}}</td>
-    </ng-container>
+  <div>
+    <div class="table-responsive"> 
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 rounded-border-radius-top">
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+            <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.id}}</td>
+          </ng-container>
+        
+        <ng-container matColumnDef="descricao">
+          <th mat-header-cell *matHeaderCellDef>Descrição</th>
+          <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.descricao}}</td>
+        </ng-container>
+      
+        <ng-container matColumnDef="dataValidade">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de Validade</th>
+          <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.dataValidade | date: 'dd/MM/yyyy' }}</td>
+        </ng-container>
+      
+        <ng-container matColumnDef="investimentoMinimo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Investimento Minimo</th>
+          <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.investimentoMinimo}}</td>
+        </ng-container>
+      
+        <ng-container matColumnDef="tipoProduto">
+          <th mat-header-cell *matHeaderCellDef>Tipo Produto</th>
+          <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.tipoProduto.nome}}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="indexador">
-        <th mat-header-cell *matHeaderCellDef>Indexador</th>
-        <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.indexador.nome}}</td>
-    </ng-container>
+        <ng-container matColumnDef="indexador">
+            <th mat-header-cell *matHeaderCellDef>Indexador</th>
+            <td mat-cell *matCellDef="let rendaFixa">{{rendaFixa.indexador.nome}}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="acoes">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let rendaFixa">
+        <ng-container matColumnDef="acoes">
+            <th mat-header-cell *matHeaderCellDef>Ações</th>
+            <td mat-cell *matCellDef="let rendaFixa">
 
-            <button mat-button
-                color="primary"
-                aria-label="Editar Renda Fixa" 
-                (click)="editarRendaFixa(rendaFixa)">
-                <mat-icon>edit</mat-icon>
-            </button>
+                <button mat-button
+                    color="primary"
+                    aria-label="Editar Renda Fixa" 
+                    (click)="editarRendaFixa(rendaFixa)">
+                    <mat-icon>edit</mat-icon>
+                </button>
 
-            <button mat-button
-                color="warn"
-                aria-label="Deletar Renda Fixa" 
-                (click)="removerRendaFixa(rendaFixa.id)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+                <button mat-button
+                    color="warn"
+                    aria-label="Deletar Renda Fixa" 
+                    (click)="removerRendaFixa(rendaFixa.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
 
-  <mat-paginator 
-  class="paginator"
-  [pageSizeOptions]="[10, 20, 50, 100]">
-  </mat-paginator>
+      
+    </div>
+    <mat-paginator 
+    class="paginator rounded-border-radius-bottom"
+    [pageSizeOptions]="[10, 20, 50, 100]">
+    </mat-paginator>
+  </div>
 </div>
