FIX: fixed NEW Button on phone's screen

--- a/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
+++ b/src/app/pages/renda-fixa/components/renda-fixa-table/renda-fixa-table.component.html
@@ -1,7 +1,7 @@
 <div class="renda-fixa-table-container">
   <button mat-flat-button class="new-item-btn" (click)="createRendaFixa()">
       <mat-icon fontIcon="add"></mat-icon>
-      NOVO ITEM
+      NOVO
   </button>
   <div>
     <div class="table-responsive"> 
